@@ -18,8 +18,22 @@ extern "C" {
 #include <sys/time.h>
 #include <cibyl.h>
 
-time_t time(time_t* t); /* Not generated */
+struct tm {
+  int tm_sec;         /* seconds */
+  int tm_min;         /* minutes */
+  int tm_hour;        /* hours */
+  int tm_mday;        /* day of the month */
+  int tm_mon;         /* month */
+  int tm_year;        /* year */
+  int tm_wday;        /* day of the week */
+  int tm_yday;        /* day in the year */
+  int tm_isdst;       /* daylight saving time */
+};
 
+extern struct tm *gmtime(const time_t *timep);
+extern time_t timegm(struct tm *_tm);
+
+time_t time(time_t* t); /* Not generated */
 int __gettimeofday(int* tv, int* tz); /* Not generated */
 
 static inline int gettimeofday(struct timeval* tv, struct timezone* tz)
